Unify ENV syntax

--- a/hivemq4/base-image/Dockerfile
+++ b/hivemq4/base-image/Dockerfile
@@ -19,16 +19,16 @@ ARG HIVEMQ_GID=10000
 ARG HIVEMQ_UID=10000
 
 # Additional JVM options, may be overwritten by user
-ENV JAVA_OPTS "-XX:+UnlockExperimentalVMOptions -XX:+UseNUMA"
+ENV JAVA_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseNUMA"
 
 # Default allow all extension, set this to false to disable it
-ENV HIVEMQ_ALLOW_ALL_CLIENTS "true"
+ENV HIVEMQ_ALLOW_ALL_CLIENTS=true
 
 # Enable REST API default value
-ENV HIVEMQ_REST_API_ENABLED "false"
+ENV HIVEMQ_REST_API_ENABLED=false
 
 # Whether we should print additional debug info for the entrypoints
-ENV HIVEMQ_VERBOSE_ENTRYPOINT "false"
+ENV HIVEMQ_VERBOSE_ENTRYPOINT=false
 
 # Set locale
 ENV LANG=en_US.UTF-8
