--- a/hivemq4/dns-image/Dockerfile
+++ b/hivemq4/dns-image/Dockerfile
@@ -5,14 +5,14 @@ FROM ${BASEIMAGE}
 ARG DNS_DISCOVERY_EXTENSION_VERSION=4.2.5
 
 # Use default DNS resolution timeout as default discovery interval
-ENV HIVEMQ_DNS_DISCOVERY_INTERVAL 31
-ENV HIVEMQ_DNS_DISCOVERY_TIMEOUT 30
+ENV HIVEMQ_DNS_DISCOVERY_INTERVAL=31
+ENV HIVEMQ_DNS_DISCOVERY_TIMEOUT=30
 
 # The default cluster transport bind port to use (UDP port)
-ENV HIVEMQ_CLUSTER_PORT 8000
-ENV HIVEMQ_CONTROL_CENTER_USER admin
-ENV HIVEMQ_CONTROL_CENTER_PASSWORD a68fc32fc49fc4d04c63724a1f6d0c90442209c46dba6975774cde5e5149caf8
-ENV HIVEMQ_CLUSTER_TRANSPORT_TYPE UDP
+ENV HIVEMQ_CLUSTER_PORT=8000
+ENV HIVEMQ_CONTROL_CENTER_USER=admin
+ENV HIVEMQ_CONTROL_CENTER_PASSWORD=a68fc32fc49fc4d04c63724a1f6d0c90442209c46dba6975774cde5e5149caf8
+ENV HIVEMQ_CLUSTER_TRANSPORT_TYPE=UDP
 
 COPY config.xml /opt/hivemq/conf/config.xml
 COPY 40_dns_entrypoint.sh /docker-entrypoint.d/40_dns_entrypoint.sh
