--- a/hivemq4/k8s-image/Dockerfile
+++ b/hivemq4/k8s-image/Dockerfile
@@ -1,6 +1,7 @@
 ARG BASEIMAGE=hivemq/hivemq4:dns-latest
 
 
+# Additional build image to unpack the zip files and change the permissions without retaining large layers just for those operations
 FROM alpine:3.19@sha256:c5b1261d6d3e43071626931fc004f70149baeba2c8ec672bd4f27761f8e1ad6b as unpack
 
 ARG PROMETHEUS_EXTENSION_VERSION=4.0.8
@@ -20,6 +21,7 @@ COPY prometheusConfiguration.properties /opt/hivemq/extensions/hivemq-prometheus
 RUN chmod -R 770 /opt/hivemq/extensions/hivemq-prometheus-extension
 
 
+# Actual image
 FROM ${BASEIMAGE}
 
 ENV HIVEMQ_LOG_LEVEL=INFO\
