Add master-4.9 to renovate.json5

--- a/renovate.json5
+++ b/renovate.json5
@@ -5,6 +5,7 @@
     ],
     baseBranches: [
         "master",
+        "master-4.9",
         "renovate-playground"
     ],
     "useBaseBranchConfig": "merge",
