--- a/renovate.json5
+++ b/renovate.json5
@@ -1,22 +1,3 @@
 {
-    "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-    "extends": [
-        "local>hivemq/renovate-config:default.json5"
-    ],
-    baseBranches: [
-        "master",
-        "renovate-playground"
-    ],
-    "useBaseBranchConfig": "merge",
-    "branchPrefix": "renovate/hivemq4-docker-images/",
-    "packageRules": [
-        // disable updates of the HiveMQ Platform Docker images, so the release job picks up the locally built images
-        // using the `latest` tag (without digest pinning)
-        {
-            "matchPackagePrefixes": [
-                "hivemq/hivemq4"
-            ],
-            "enabled": false
-        }
-    ]
+  $schema: "https://docs.renovatebot.com/renovate-schema.json",
 }
