Install unzip only in k8s image

--- a/hivemq4/base-image/Dockerfile
+++ b/hivemq4/base-image/Dockerfile
@@ -30,12 +30,9 @@ ENV HIVEMQ_VERBOSE_ENTRYPOINT=false
 # Set locale
 ENV LANG=en_US.UTF-8
 
-RUN set -x \
-    && apt-get update && apt-get install -y --no-install-recommends unzip && rm -rf /var/lib/apt/lists/* \
-    && mkdir -p /docker-entrypoint.d
-
 # HiveMQ setup
 COPY --chmod=755 docker-entrypoint.sh /opt/docker-entrypoint.sh
+RUN mkdir -p /docker-entrypoint.d
 COPY entrypoints.d/* /docker-entrypoint.d/
 COPY --from=unpack /opt/hivemq /opt/hivemq
 RUN chmod 770 /opt/hivemq
