--- a/hivemq4/base-image/Dockerfile
+++ b/hivemq4/base-image/Dockerfile
@@ -1,5 +1,5 @@
 # Additional build image to unpack the zip file and change the permissions without retaining large layers just for those operations
-FROM busybox:1.36.1@sha256:c3839dd800b9eb7603340509769c43e146a74c63dca3045a8e7dc8ee07e53966 AS unpack
+FROM alpine:3.19@sha256:c5b1261d6d3e43071626931fc004f70149baeba2c8ec672bd4f27761f8e1ad6b as unpack
 
 ARG HIVEMQ_VERSION
 
