Cleanup file permissions Instead of 770 for all files in /opt/hivemq: - 770 for directories - 660 for files - 770 for executable files (.sh, mqtt-cli, hivemq-ese-helper) Explicitly specify permissions for entrypoint scripts - 644 for sourced files - 755 for run files

--- a/hivemq4/base-image/Dockerfile
+++ b/hivemq4/base-image/Dockerfile
@@ -8,8 +8,11 @@ RUN unzip /tmp/hivemq.zip -d /opt \
     && mv /opt/hivemq-${HIVEMQ_VERSION} /opt/hivemq \
     && rm -rf /opt/hivemq/tools/hivemq-swarm
 COPY config.xml /opt/hivemq/conf/config.xml
-RUN chmod -R 770 /opt/hivemq \
-    && chmod +x /opt/hivemq/bin/run.sh
+RUN find /opt/hivemq -type d -print0 | xargs -0 chmod 770 \
+    && find /opt/hivemq -type f -print0 | xargs -0 chmod 660 \
+    && chmod 770 /opt/hivemq/**/*.sh \
+    && chmod 770 /opt/hivemq/tools/mqtt-cli*/bin/mqtt \
+    && chmod 770 /opt/hivemq/extensions/hivemq-enterprise-security-extension/helper/linux/hivemq-ese-helper
 
 
 # Actual image
@@ -30,10 +33,12 @@ ENV HIVEMQ_VERBOSE_ENTRYPOINT=false
 # Set locale
 ENV LANG=en_US.UTF-8
 
-# HiveMQ setup
+# HiveMQ entrypoint
 COPY --chmod=755 docker-entrypoint.sh /opt/docker-entrypoint.sh
 RUN mkdir -p /docker-entrypoint.d
-COPY entrypoints.d/* /docker-entrypoint.d/
+COPY --chmod=644 20_handle_envs.sh /docker-entrypoint.d/20_handle_envs.sh
+
+# HiveMQ
 COPY --from=unpack /opt/hivemq /opt/hivemq
 RUN chmod 770 /opt/hivemq
 
