--- a/hivemq4/dns-image/Dockerfile
+++ b/hivemq4/dns-image/Dockerfile
@@ -13,7 +13,8 @@ RUN apk --update add curl \
     && curl -L https://github.com/hivemq/hivemq-dns-cluster-discovery-extension/releases/download/${DNS_DISCOVERY_EXTENSION_VERSION}/hivemq-dns-cluster-discovery-${DNS_DISCOVERY_EXTENSION_VERSION}.zip -o /tmp/hivemq-dns-cluster-discovery-extension.zip \
     && unzip /tmp/hivemq-dns-cluster-discovery-extension.zip -d /opt/hivemq/extensions \
     && rm /tmp/hivemq-dns-cluster-discovery-extension.zip \
-    && chmod -R 770 /opt/hivemq/extensions/hivemq-dns-cluster-discovery
+    && find /opt/hivemq/extensions/hivemq-dns-cluster-discovery -type d -print0 | xargs -0 chmod 770 \
+    && find /opt/hivemq/extensions/hivemq-dns-cluster-discovery -type f -print0 | xargs -0 chmod 660
 
 
 # Actual image
@@ -31,7 +32,7 @@ ENV HIVEMQ_CONTROL_CENTER_USER=admin
 ENV HIVEMQ_CONTROL_CENTER_PASSWORD=a68fc32fc49fc4d04c63724a1f6d0c90442209c46dba6975774cde5e5149caf8
 ENV HIVEMQ_CLUSTER_TRANSPORT_TYPE=UDP
 
-COPY config.xml /opt/hivemq/conf/config.xml
+COPY --chmod=660 config.xml /opt/hivemq/conf/config.xml
 COPY --chmod=755 40_dns_entrypoint.sh /docker-entrypoint.d/40_dns_entrypoint.sh
 COPY --from=unpack /opt/hivemq/extensions/ /opt/hivemq/extensions/
 
