Remove unnecessary write permissions in /opt/hivemq

--- a/hivemq4/base-image/Dockerfile
+++ b/hivemq4/base-image/Dockerfile
@@ -8,11 +8,34 @@ RUN unzip /tmp/hivemq.zip -d /opt \
     && mv /opt/hivemq-${HIVEMQ_VERSION} /opt/hivemq \
     && rm -rf /opt/hivemq/tools/hivemq-swarm
 COPY config.xml /opt/hivemq/conf/config.xml
-RUN find /opt/hivemq -type d -print0 | xargs -0 chmod 770 \
-    && find /opt/hivemq -type f -print0 | xargs -0 chmod 660 \
-    && chmod 770 /opt/hivemq/**/*.sh \
-    && chmod 770 /opt/hivemq/tools/mqtt-cli*/bin/mqtt || true \
-    && chmod 770 /opt/hivemq/extensions/hivemq-enterprise-security-extension/helper/linux/hivemq-ese-helper || true
+RUN find /opt/hivemq -type d -print0 | xargs -0 chmod 750 \
+    && find /opt/hivemq -type f -print0 | xargs -0 chmod 640 \
+    # files that need execute permissions
+    && chmod 750 /opt/hivemq/**/*.sh \
+    && chmod 750 /opt/hivemq/tools/mqtt-cli*/bin/mqtt || true \
+    && chmod 750 /opt/hivemq/extensions/hivemq-enterprise-security-extension/helper/linux/hivemq-ese-helper || true \
+    # directories that need write permissions
+    && chmod 770 /opt/hivemq/audit \
+    && chmod 770 /opt/hivemq/backup \
+    && chmod 770 /opt/hivemq/conf \
+    && chmod 770 /opt/hivemq/data \
+    && chmod 770 /opt/hivemq/extensions \
+    && chmod 770 /opt/hivemq/extensions/* \
+    && chmod 770 /opt/hivemq/extensions/*/conf || true \
+    && chmod 770 /opt/hivemq/extensions/hivemq-amazon-kinesis-extension/customizations || true \
+    && chmod 770 /opt/hivemq/extensions/hivemq-enterprise-security-extension/drivers || true \
+    && chmod 770 /opt/hivemq/extensions/hivemq-enterprise-security-extension/drivers/jdbc || true \
+    && chmod 770 /opt/hivemq/extensions/hivemq-google-cloud-pubsub-extension/customizations || true \
+    && chmod 770 /opt/hivemq/extensions/hivemq-kafka-extension/customizations || true \
+    && chmod 770 /opt/hivemq/extensions/hivemq-kafka-extension/local-schema-registry || true \
+    && chmod 770 /opt/hivemq/license \
+    && chmod 770 /opt/hivemq/log \
+    # files that need write permissions
+    && chmod 660 /opt/hivemq/conf/config.xml \
+    && chmod 660 /opt/hivemq/conf/logback.xml \
+    && chmod 660 /opt/hivemq/conf/tracing.xml \
+    && chmod 660 /opt/hivemq/extensions/*/DISABLED || true \
+    && chmod 660 /opt/hivemq/extensions/*/hivemq-extension.xml || true
 
 
 # Actual image
