--- a/hivemq4/dns-image/Dockerfile
+++ b/hivemq4/dns-image/Dockerfile
@@ -1,9 +1,23 @@
 ARG BASEIMAGE=hivemq/hivemq4:latest
 
 
-FROM ${BASEIMAGE}
+# Additional build image to unpack the zip files and change the permissions without retaining large layers just for those operations
+FROM alpine:3.20@sha256:77726ef6b57ddf65bb551896826ec38bc3e53f75cdde31354fbffb4f25238ebd AS unpack
 
 ARG DNS_DISCOVERY_EXTENSION_VERSION=4.3.0
+
+RUN mkdir -p /opt/hivemq/extensions
+
+# Unpack hivemq-dns-cluster-discovery-extension
+RUN apk --update add curl \
+    && curl -L https://github.com/hivemq/hivemq-dns-cluster-discovery-extension/releases/download/${DNS_DISCOVERY_EXTENSION_VERSION}/hivemq-dns-cluster-discovery-${DNS_DISCOVERY_EXTENSION_VERSION}.zip -o /tmp/hivemq-dns-cluster-discovery-extension.zip \
+    && unzip /tmp/hivemq-dns-cluster-discovery-extension.zip -d /opt/hivemq/extensions \
+    && rm /tmp/hivemq-dns-cluster-discovery-extension.zip \
+    && chmod -R 770 /opt/hivemq/extensions/hivemq-dns-cluster-discovery
+
+
+# Actual image
+FROM ${BASEIMAGE}
 
 # Use default DNS resolution timeout as default discovery interval
 ENV HIVEMQ_DNS_DISCOVERY_INTERVAL=31
@@ -15,12 +29,6 @@ ENV HIVEMQ_CONTROL_CENTER_USER=admin
 ENV HIVEMQ_CONTROL_CENTER_PASSWORD=a68fc32fc49fc4d04c63724a1f6d0c90442209c46dba6975774cde5e5149caf8
 ENV HIVEMQ_CLUSTER_TRANSPORT_TYPE=UDP
 
-COPY config.xml /opt/hivemq/conf/config.xml
-COPY 40_dns_entrypoint.sh /docker-entrypoint.d/40_dns_entrypoint.sh
-
-# Setup hivemq-dns-cluster-discovery-extension
-RUN curl -L https://github.com/hivemq/hivemq-dns-cluster-discovery-extension/releases/download/${DNS_DISCOVERY_EXTENSION_VERSION}/hivemq-dns-cluster-discovery-${DNS_DISCOVERY_EXTENSION_VERSION}.zip -o /tmp/hivemq-dns-cluster-discovery-extension.zip \
-    && unzip /tmp/hivemq-dns-cluster-discovery-extension.zip -d /opt/hivemq/extensions \
-    && rm /tmp/hivemq-dns-cluster-discovery-extension.zip \
-    && chmod -R 770 /opt/hivemq/extensions/hivemq-dns-cluster-discovery \
-    && chmod +x /docker-entrypoint.d/40_dns_entrypoint.sh
+COPY --chmod=644 config.xml /opt/hivemq/conf/config.xml
+COPY --chmod=755 40_dns_entrypoint.sh /docker-entrypoint.d/40_dns_entrypoint.sh
+COPY --from=unpack /opt/hivemq/extensions/ /opt/hivemq/extensions/
