--- a/hivemq4/k8s-image/Dockerfile
+++ b/hivemq4/k8s-image/Dockerfile
@@ -2,7 +2,7 @@ ARG BASEIMAGE=hivemq/hivemq4:dns-latest
 
 
 # Additional build image to unpack the zip files and change the permissions without retaining large layers just for those operations
-FROM alpine:3.20@sha256:77726ef6b57ddf65bb551896826ec38bc3e53f75cdde31354fbffb4f25238ebd as unpack
+FROM alpine:3.20@sha256:77726ef6b57ddf65bb551896826ec38bc3e53f75cdde31354fbffb4f25238ebd AS unpack
 
 ARG PROMETHEUS_EXTENSION_VERSION=4.0.10
 
@@ -15,7 +15,8 @@ RUN unzip /tmp/hivemq-k8s-sync-extension.zip -d /opt/hivemq/extensions \
     && chmod -R 770 /opt/hivemq/extensions/hivemq-k8s-sync-extension
 
 # Unpack hivemq-prometheus-extension
-RUN apk --update add curl && curl -L https://github.com/hivemq/hivemq-prometheus-extension/releases/download/${PROMETHEUS_EXTENSION_VERSION}/hivemq-prometheus-extension-${PROMETHEUS_EXTENSION_VERSION}.zip -o /tmp/hivemq-prometheus-extension.zip \
+RUN apk --update add curl \
+    && curl -L https://github.com/hivemq/hivemq-prometheus-extension/releases/download/${PROMETHEUS_EXTENSION_VERSION}/hivemq-prometheus-extension-${PROMETHEUS_EXTENSION_VERSION}.zip -o /tmp/hivemq-prometheus-extension.zip \
     && unzip /tmp/hivemq-prometheus-extension.zip -d /opt/hivemq/extensions \
     && rm /tmp/hivemq-prometheus-extension.zip \
     && rm /opt/hivemq/extensions/hivemq-prometheus-extension/prometheusConfiguration.properties
@@ -29,12 +30,10 @@ FROM ${BASEIMAGE}
 ENV HIVEMQ_LOG_LEVEL=INFO\
     HIVEMQ_CLUSTER_TRANSPORT_TYPE=TCP
 
-COPY config.xml /opt/hivemq/conf/config.xml
-COPY 15_k8s_entrypoint.sh /docker-entrypoint.d/15_k8s_entrypoint.sh
-COPY scripts/*.sh /opt/hivemq/bin/
+COPY --chmod=770 config.xml /opt/hivemq/conf/config.xml
+COPY --chmod=755 15_k8s_entrypoint.sh /docker-entrypoint.d/15_k8s_entrypoint.sh
+COPY --chmod=755 scripts/*.sh /opt/hivemq/bin/
 COPY --from=unpack /opt/hivemq/extensions/ /opt/hivemq/extensions/
-RUN chmod 770 /opt/hivemq/conf/config.xml \
-    && chmod +x /docker-entrypoint.d/15_k8s_entrypoint.sh /opt/hivemq/bin/*.sh
 
 LABEL org.opencontainers.image.vendor=HiveMQ\
       org.opencontainers.image.source=https://github.com/hivemq/hivemq4-docker-images
